# Elysia

./: .gitignore  LICENSE  README.rst  config.py.example  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: codeql.yml  run-bot.yml
Elysia/: __init__.py  __main__.py  bot.py
Elysia/database/: __init__.py  admins.py  chats.py  core.py  custom_filters.py  localization.py  notes.py  restarted.py  rules.py  warns.py  welcome.py
Elysia/plugins/: chats.py  cmds_list.py  coub.py  custom_filters.py  git.py  ids.py  info.py  inline_search.py  inlines.py  ip.py  jsondump.py  langs.py  misc.py  notes.py  pastes.py  ping.py  pypi.py  rules.py  sed.py  start.py  sudos.py  tiorunexec.py  translate.py  warns.py  welcome.py
Elysia/plugins/admins/: bans.py  misc.py  mutes.py  pins.py
Elysia/utils/: __init__.py  consts.py  decorators.py  localization.py  utils.py
locales/ar-SA/: start.json
locales/ckb-IR/: start.json
locales/cs-CZ/: start.json
locales/da-DK/: start.json
locales/de-DE/: start.json
locales/es-ES/: start.json
locales/fi-FI/: start.json
locales/fr-FR/: start.json
locales/he-IL/: start.json
locales/id-ID/: start.json
locales/it-IT/: start.json
locales/ja-JP/: start.json
locales/mz-IN/: main.json  start.json
locales/nl-NL/: start.json
locales/no-NO/: start.json
locales/pl-PL/: start.json
locales/pt-BR/: start.json
locales/pt-BR2/: start.json
locales/pt-BRe/: start.json
locales/ro-RO/: start.json
locales/ru-RU/: start.json
locales/sv-SE/: start.json
locales/tr-TR/: start.json
locales/zh-TW/: start.json
