[project]
name = "Elysia"
version = "0.0.0"
description = "A multipurpose Telegram Bot made with Pyrogram and asynchronous programming."
readme = "README.rst"

dependencies = [
  "gpytranslate==1.5.1",
  "httpx[http2]>=0.18.1,<1.0.0",
  "humanfriendly",
  "meval==2.5",
  "Pillow>=8.4.0,<11.0.0",
  # Using Famhawite Infosys Pyrogram fork
  "pyrogram @ https://github.com/lalrochhara/pyrogram",
  "pytio",
  "regex",
  "speedtest-cli",
  "tgcrypto",
  # Using uvloop to increase general speed and stability. Ignored under Windows
  "uvloop>=0.10.0,<0.18.0; platform_system != 'Windows'",
  "yarl",
  "yt-dlp==2023.9.24",
]
requires-python = ">=3.7"

authors = [{ name = "Famhawite Infosys", email = "hello.famhawiteinfosys@gmail.com" }]
license = { text = "MIT" }


[project.urls]
homepage = "https://github.com/lalrochhara/Elysia"

[tool.ruff]
src = ["."]
target-version = "py37"
select = ["ALL"]
ignore = [
  "ANN204", # Missing return type annotation for special method
  "ARG001", # Unused function argument
  "COM812", # Trailing comma missing
  "D100",   # Missing docstring
  "D103",   # Missing docstring
  "EM",     # flake8-errmsg
  "RET502", # Do not implicitly `return None` in function able to return non-`None` value
  "RET503", # Missing explicit `return` at the end of function able to return non-`None` value
  "RUF001", # String contains ambiguous unicode character
]
